--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.10']
 
     services:
       postgres:
@@ -26,7 +29,9 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.9
+        python-version: ${{ matrix.python-version }}
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"   
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
@@ -163,4 +168,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен!         
+        message: Деплой успешно выполнен! Коммит https://github.com/${{ github.repository }}/commit/${{ github.sha }} от ${{github.actor}}. ${{github.event.commits[0].message}}      
