--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,13 +8,15 @@ services:
     image: postgres:13
     env_file: .env
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data 
   backend:
     image: albinagiliazova/kittygram_backend
     env_file: .env
     volumes:
       - static:/backend_static
       - media:/media
+    depends_on:
+      - db   
   frontend:
     env_file: .env
     image: albinagiliazova/kittygram_frontend
@@ -28,3 +30,5 @@ services:
       - 9000:80
     volumes:
       - static:/static
+    depends_on:
+      - backend   
