--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -46,6 +46,10 @@ jobs:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
           DB_HOST: 127.0.0.1
           DB_PORT: 5432
+          # fake secret key
+          SECRET_KEY: 'fea7f21ec1373b9d8cc23b4245be18e4afedd463b3906f4817'
+          DEBUG: ${{ secrets.DEBUG }}
+          ALLOWED_HOSTS: ['localhost', '127.0.0.1']
       run: |
         python -m flake8 backend/
         cd backend/
