--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -49,7 +49,7 @@ jobs:
           # fake secret key
           SECRET_KEY: 'fea7f21ec1373b9d8cc23b4245be18e4afedd463b3906f4817'
           DEBUG: ${{ secrets.DEBUG }}
-          ALLOWED_HOSTS: ['localhost', '127.0.0.1']
+          ALLOWED_HOSTS: '127.0.0.1'
       run: |
         python -m flake8 backend/
         cd backend/
