--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ POSTGRES_PASSWORD=stoykiyparol
 POSTGRES_DB=db_example
 DB_HOST=from_compose
 DB_PORT=1234
-SECRET_KEY = 'django-insecure-abdfgkjgjhgkjhlklklkhlklkjlkjkljlkjlkjlkjlk'
-DEBUG = True
-ALLOWED_HOSTS = ['127.0.0.1', 'localhost']
+SECRET_KEY=django-insecure-abdfgkjgjhgkjhlklklkhlklkjlkjkljlkjlkjlkjlk
+DEBUG=False
+ALLOWED_HOSTS=127.0.0.1
