--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,9 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 5432
           # fake secret key
-          SECRET_KEY: 'fea7f21ec1373b9d8cc23b4245be18e4afedd463b3906f4817'
-          DEBUG: ${{ secrets.DEBUG }}
-          ALLOWED_HOSTS: '127.0.0.1'
+          SECRET_KEY: fea7f21ec1373b9d8cc23b4245be18e4afedd463b3906f4817
+          DEBUG: True
+          ALLOWED_HOSTS: 127.0.0.1
       run: |
         python -m flake8 backend/
         cd backend/
