--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -31,7 +31,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Display Python version
-      run: python -c "import sys; print(sys.version)"   
+      run: |
+        python -c "import sys; print(sys.version)"
+        python -c ""
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
@@ -44,6 +46,10 @@ jobs:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
           DB_HOST: 127.0.0.1
           DB_PORT: 5432
+          # fake secret key
+          SECRET_KEY: fea7f21ec1373b9d8cc23b4245be18e4afedd463b3906f4817
+          DEBUG: True
+          ALLOWED_HOSTS: 127.0.0.1
       run: |
         python -m flake8 backend/
         cd backend/
@@ -168,4 +174,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен! Коммит https://github.com/${{ github.repository }}/commit/${{ github.sha }} от ${{github.actor}}. ${{github.event.commits[0].message}}          
+        message: Деплой успешно выполнен! Коммит https://github.com/${{ github.repository }}/commit/${{ github.sha }} от ${{github.actor}}. ${{github.event.commits[0].message}}           
