--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 volumes:
   pg_data:
   static:
@@ -32,3 +30,6 @@ services:
       - 9000:80
     volumes:
       - static:/static
+      - media:/media
+    depends_on:
+      - backend   
