--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   index index.html;
   server_tokens off;
-  client_max_body_size 50M;
+  client_max_body_size 20M;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -16,11 +16,13 @@ server {
   }
 
   location /media/ {
-    alias /media/;
+    proxy_set_header Host $http_host;
+    root /app/;
     client_max_body_size 20M;
   }
 
   location / {
+    proxy_set_header Host $http_host;
     alias /static/;
     try_files $uri $uri/ /index.html;
   }
