--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ server {
 
   location /media/ {
     proxy_set_header Host $http_host;
-    root /app/;
+    alias /app/;
     client_max_body_size 20M;
   }
 
