--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -32,4 +32,6 @@ services:
       - static:/static
       - media:/app/media/
     depends_on:
-      - backend   
+      - backend  
+  redis:
+    build: ./redis/      
